# ros-net-sim

./: .gitignore  README.md
channel_simulator/: CMakeLists.txt  package.xml
channel_simulator/include/channel_simulator/: channel_simulator.h
channel_simulator/msg/: PathlossPair.msg  PathlossPairArray.msg
channel_simulator/src/: channel_simulator.cpp  channel_simulator_test.cpp  segment_node.cpp
example/: CMakeLists.txt  package.xml  plugin.xml  setup.py
example/action/: WaypointNavigation.action
example/cfg/: argos_demo.yaml  example.yaml  testing.yaml
example/include/example/: nav_base.h
example/launch/: argos.launch  example.launch  gazebo.launch  net_sim_dummy.launch  network_coordinator.launch  phy_sim_dummy.launch  testing.launch  turtlebot3.launch
example/maps/: spawc_no_ground.bt
example/rviz/: example.rviz
example/scripts/: net_sim_dummy.py  phy_sim_dummy.py  run_patrol.py
example/src/: nav_base.cpp  nav_base_node.cpp  nav_base_nodelet.cpp
example/worlds/: spawc.world
network_coordinator/: CMakeLists.txt  package.xml  setup.cfg  setup.py
network_coordinator/scripts/: argos_hack_net_coord.py  net_coord.py  network_coordinator.py
network_coordinator/src/network_coordinator/: __init__.py  argos_hack_coord.py  constants.py  coordinator.py  utils.py
physics_coordinator/: CMakeLists.txt  package.xml
physics_coordinator/launch/: custom_main_empty_world.launch
physics_coordinator/scripts/: gazebo_custom_server  gazebo_custom_server_debug  libcommon.sh
physics_coordinator/src/: gazebo_custom_main.cpp
protobuf_msgs/: CMakeLists.txt  package.xml  setup.py
protobuf_msgs/protobuf/: channel_data.proto  network_update.proto  physics_update.proto
