<?xml version="1.0"?>
<package format="2">
  <name>example</name>
  <version>0.0.0</version>
  <description>Example and test scenarios for ROS-NetSim</description>

  <maintainer email="cfullana@seas.upenn.edu">Miguel Calvo-Fullana</maintainer>
  <maintainer email="mox@seas.upenn.edu">Daniel Mox</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>nav_msgs</depend>
  <depend>network_coordinator</depend>
  <depend>nodelet</depend>
  <depend>protobuf_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_bringup</exec_depend>
  <exec_depend>octomap_server</exec_depend>

  <export>
    <nodelet plugin="${prefix}/plugin.xml" />
  </export>

</package>
