[metadata]
name = network_coordinator
version = 0.0.1
author = 'Tyler Ferrara'
author_email = 'tylerferrara123@gmail.com'
description = ROS network coordinator.
url = https://github.com/NESTLab/ros-net-sim
project_urls =
    Bug Tracker = https://github.com/NESTLab/ros-net-sim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src