<?xml version="1.0"?>
<package format="2">
  <name>protobuf_msgs</name>
  <version>0.0.1</version>
  <description>The ROS-NetSim protobuf messages package</description>

  <maintainer email="cfullana@seas.upenn.edu">Miguel Calvo-Fullana</maintainer>
  <maintainer email="mox@seas.upenn.edu">Daniel Mox</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>protobuf-dev</depend>

</package>
